@@ -30,7 +30,11 @@
                                         <li><a href="{% url 'wagtailadmin_pages:view_draft' page.id %}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'Draft' %}</a></li>
                                     {% endif %}
                                     {% if page.live %}
-                                        <li><a href="{{ page.url }}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'Live' %}</a></li>
+                                        {% with page_url=page.url %}
+                                            {% if page_url is not None %}
+                                                <li><a href="{{ page_url }}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'Live' %}</a></li>
+                                            {% endif %}
+                                        {% endwith %}
                                     {% endif %}
                                 </ul>
                             </td>
